   enrich it (GitHub's #477) [Mt].
 * Don't eat up quotes around parameters containing spaces, as they are needed
   later on when passing parameters to msgmerge and friends (GitHub's #455)
   [gemmaro].

Gemtext:
 * New module (GitHub's #466) [gemmaro].

Documentation:
 * Fix many typos introduced in previous release [Golubev Alexander
   and Rafael Fontenelle].

Translations:
 * Updated: Chinese (simplified), thanks Wenbin Lv.
 * Updated: Esperanto, thanks Marco Ciampa.
 * Updated: French, thanks brandelune.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Italian, thanks Marco Ciampa.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Norwegian Bokmål, thanks Petter Reinholdtsen.
 * Updated: Portuguese (Brazil), thanks Rafael Fontenelle.
 * Updated: Russian, thanks Golubev Alexander.
 * Updated: Spanish, thanks gallegonovato.
 * Updated: Ukrainian, thanks Yuri Chornoivan (українська) and Сергій.

=======================================================================
        ___  _____ ___
__   __/ _ \|___  / _ \
\ \ / / | | |  / / | | |          The PerlIO cleanup release.
 \ V /| |_| | / /| |_| |
  \_/  \___(_)_/  \___/           (Released on 2024/01/29)

Major cleanup: 
 * Greatly simplify the code by using PerlIO instead of messing up 
   with encodings manually.
 * This is a very intrusive change, and even if all tests of our 
   comprehensive suite pass, I still expect issues with this on some
   corner cases, such as projects not using UTF-8 but a mixture of 
   encodings. Please report any issue, and accept my apologies.
 * This greatly simplifies the code, enabling future maintenance.

Asciidoc:
 * Correctly handle lines that start with a dot in a paragraph.
   Thanks Jean-Noël Avila for the pull request.
 * Labels of cross-references were not translatable (GitHub's #400).
   Thanks Jean-Noël Avila for the pull request.
 * Fix a bug in the handling of the 'id' attribute (GitHub's #411).
   Thanks Jean-Noël Avila for the pull request.