@@ -24,6 +24,10 @@ Documentation:
  * Fix many typos introduced in previous release [Golubev Alexander
    and Rafael Fontenelle].
 
+General:
+ * Better error messages on encoding errors. It remains fragile, but at least we 
+   try to display an error message (also GitHub's #477) [Mt].
+
 Translations:
  * Updated: Chinese (simplified), thanks Wenbin Lv.
  * Updated: Esperanto, thanks Marco Ciampa.
